--- a/config/config.json
+++ b/config/config.json
@@ -13,6 +13,7 @@
   },
   "externals": {},
   "localizedResources": {
-    "TilesSpFxWebPartStrings": "lib/webparts/tilesSpFx/loc/{locale}.js"
+    "TilesSpFxWebPartStrings": "lib/webparts/tilesSpFx/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
   }
 }
