--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "@fluentui/react": "^7.153.3",
+    "@fluentui/react-hooks": "^8.0.0-beta.0",
     "@microsoft/sp-core-library": "1.11.0",
     "@microsoft/sp-lodash-subset": "1.11.0",
     "@microsoft/sp-office-ui-fabric-core": "1.11.0",
