--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fluentui/react": "^7.153.3",
     "@fluentui/react-hooks": "^8.0.0-beta.0",
+    "@fluentui/react-icons": "^0.3.9",
     "@microsoft/sp-core-library": "1.11.0",
     "@microsoft/sp-lodash-subset": "1.11.0",
     "@microsoft/sp-office-ui-fabric-core": "1.11.0",
@@ -22,7 +23,8 @@
     "@pnp/spfx-controls-react": "2.1.0",
     "office-ui-fabric-react": "6.214.0",
     "react": "16.8.5",
-    "react-dom": "16.8.5"
+    "react-dom": "16.8.5",
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "16.8.8",
