--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@microsoft/sp-property-pane": "1.11.0",
     "@microsoft/sp-webpart-base": "1.11.0",
     "@pnp/spfx-controls-react": "^2.1.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "office-ui-fabric-react": "6.214.0",
     "react": "16.8.5",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.8.5",
     "react-icons": "^4.1.0"
   },
