--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@microsoft/sp-office-ui-fabric-core": "1.11.0",
     "@microsoft/sp-property-pane": "1.11.0",
     "@microsoft/sp-webpart-base": "1.11.0",
-    "@pnp/spfx-controls-react": "^2.1.0",
+    "@pnp/spfx-controls-react": "2.3.0",
     "@types/react-beautiful-dnd": "^13.0.0",
     "office-ui-fabric-react": "6.214.0",
     "react": "16.8.5",
