--- a/src/webparts/tilesSpFx/TilesSpFxWebPart.manifest.json
+++ b/src/webparts/tilesSpFx/TilesSpFxWebPart.manifest.json
@@ -5,6 +5,7 @@
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
+  "supportsThemeVariants": true,
   "version": "*",
   "manifestVersion": 2,
 
