adding new features: search by keywords & title + search clear + search box configurable

--- a/src/webparts/tilesSpFx/TilesSpFxWebPart.manifest.json
+++ b/src/webparts/tilesSpFx/TilesSpFxWebPart.manifest.json
@@ -25,7 +25,9 @@
       "description": "Tiles SPFx",
       "title" : "",
       "tilesList" : "Tiles",
-      "orderBy" : "Title"
+      "orderBy" : "Title",
+      "isFilterEnabled": true,
+      "filterText" : "Search..."
     }
   }]
 }
