--- a/src/webparts/tilesSpFx/TilesSpFxWebPart.manifest.json
+++ b/src/webparts/tilesSpFx/TilesSpFxWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
   "id": "bf4d82af-887a-4404-b543-42017417a5b5",
-  "alias": "TilesSpFxWebPart",
+  "alias": "TilesSPFxWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
